<resources>
    <string name="app_name">MINIGAME_LRUD</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about">About</string>
    <string name="todo">todo</string>
    <string name="start">start</string>
    <string name="round">ROUND :</string>
    <string name="submit">submit</string>
    <string name="score">Score :</string>
    <string name="again">play again</string>
    <string name="minigame">MINIGAME LUDR</string>
    <string name="share">share</string>
    <string name="aboutdetail">เกมจำภาพลูกศรแล้วกดตามให้ถูกต้อง มีเวลา 3 วินาทีสำหรับจำภาพ</string>
</resources>
