<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/background_light"
        tools:context=".EndGameFragment">

        <TextView
            android:id="@+id/txtnamescore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/score"
            android:textAlignment="center"
            android:textSize="@dimen/size"
            app:layout_constraintBottom_toTopOf="@+id/txtScore"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageEnd" />

        <ImageView
            android:id="@+id/imageEnd"
            android:layout_width="@dimen/logo"
            android:layout_height="@dimen/logo"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/todo"
            app:layout_constraintBottom_toTopOf="@+id/txtnamescore"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/logo" />

        <TextView
            android:id="@+id/txtScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="@dimen/size"
            app:layout_constraintBottom_toTopOf="@+id/btnAgain"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtnamescore" />

        <Button
            android:id="@+id/btnAgain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_blue_bright"
            android:paddingLeft="@dimen/padding"
            android:paddingRight="@dimen/padding"
            android:text="@string/again"
            android:textAlignment="center"
            android:textColor="@android:color/background_light"
            android:textSize="@dimen/size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtScore" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>