<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
    tools:context=".GameFragment">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:textAlignment="center">

                <TextView
                    android:id="@+id/round"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/top"
                    android:text="@string/round"
                    android:textAlignment="center"
                    android:textSize="@dimen/size" />

                <TextView
                    android:id="@+id/txt_round"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/top"
                    android:textAlignment="center"
                    android:textSize="@dimen/size" />

                <TextView
                    android:id="@+id/countTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/size" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/top"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/item_1"
                        android:layout_width="@dimen/pic"
                        android:layout_height="@dimen/pic"
                        android:layout_weight="1"
                        android:contentDescription="@string/todo" />

                    <ImageView
                        android:id="@+id/item_2"
                        android:layout_width="@dimen/pic"
                        android:layout_height="@dimen/pic"
                        android:layout_weight="1"
                        android:contentDescription="@string/todo" />

                    <ImageView
                        android:id="@+id/item_3"
                        android:layout_width="@dimen/pic"
                        android:layout_height="@dimen/pic"
                        android:layout_weight="1"
                        android:contentDescription="@string/todo" />

                    <ImageView
                        android:id="@+id/item_4"
                        android:layout_width="@dimen/pic"
                        android:layout_height="@dimen/pic"
                        android:layout_weight="1"
                        android:contentDescription="@string/todo" />

                    <ImageView
                        android:id="@+id/item_5"
                        android:layout_width="@dimen/pic"
                        android:layout_height="@dimen/pic"
                        android:layout_weight="1"
                        android:contentDescription="@string/todo"


                        />
                </LinearLayout>

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/l_height"
                    android:orientation="horizontal"
                    android:textAlignment="center">

                    <Button
                        android:id="@+id/image_L"
                        style="@android:style/Widget.Button.Small"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/btn_l"
                        android:contentDescription="@string/todo"
                        android:textSize="@dimen/size" />

                    <Button
                        android:id="@+id/image_U"
                        style="@android:style/Widget.Button.Small"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/btn_u"
                        android:contentDescription="@string/todo"
                        android:textSize="@dimen/size" />

                    <Button
                        android:id="@+id/image_D"
                        style="@android:style/Widget.Button.Small"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/btn_d"
                        android:textSize="@dimen/size" />

                    <Button
                        android:id="@+id/image_R"
                        style="@android:style/Widget.Button.Small"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/btn_r"
                        android:textSize="@dimen/size" />

                </LinearLayout>

                <Button
                    android:id="@+id/btn_submit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/top"
                    android:background="@android:color/holo_orange_light"
                    android:text="@string/submit"
                    android:textColor="@android:color/background_light"
                    android:textSize="@dimen/size" />
            </LinearLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
    </layout>